# example-bristol-gui

./: .autotools  .cproject  .gitignore  .project  ChangeLog  Makefile.am  README  autoclear.sh  autogen.sh  bristol-gui.geany  configure.ac  debian.config  index.html  package-deb.lua
Data/: bristolgui.glade
Data/Gtk/: bristolgui.glade  mainwindow.glade
Doc/: sketch.ep
Packaging/deb/DEBIAN/: control
Source/all/: app_profile.c  app_session.c  bg_common.c  bg_common_basic.c  bg_common_gui.c  bg_configuration.c  bg_control.c  bg_data.c  bg_gui.c  bg_gui.c.backup  bg_gui_common.c  bg_gui_profile.c  bg_gui_window.c  bg_handlers.c  bg_option.c  bg_options.c  bg_options_general.c  bg_session.c  bg_starter.c  common_gui.c  gtk_common.c  gtkc_all.c  gui.c  handlers.c  l_common.c  l_option.c  lg_basic.c  lg_option.c  lgtk.c  lgui_builder.c  lgui_common.c  lgui_switch.c  llib_common.c  llib_option.c  llib_value.c  ltk_builder.c  ltk_combo_box.c  ltk_common.c  ltk_switch.c  main.c  (+3 more)
Source/all/include/: app_profile.h  app_session.h  bg_common.h  bg_common_basic.h  bg_common_gui.h  bg_config.h  bg_configuration.h  bg_control.h  bg_data.h  bg_gui.h  bg_gui_common.h  bg_gui_profile.h  bg_gui_window.h  bg_handlers.h  bg_option.h  bg_options.h  bg_options_general.h  bg_session.h  bg_starter.h  bristolgui.h  common_gui.h  dialog.h  gtk_common.h  gtkc_all.h  gui.h  handlers.h  l_option.h  lg.h  lg_basic.h  lg_option.h  lgtk.h  lgui.h  lgui_builder.h  lgui_common.h  lgui_config.h  lgui_switch.h  llib.h  llib_common.h  llib_config.h  llib_option.h  (+9 more)
css/: colorbox.css  lumen.css  style.css
deb/: bristolgui.deb  lgui-0.1.deb
js/: lumen.js
