AC_INIT([bristolgui], [0.1])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([bristolgui], [0.1])
AC_PROG_CC
AM_PROG_CC_C_O

PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.0])
PKG_CHECK_MODULES([lgui], [lgui-0.1 >= 0.1])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(lgui_CFLAGS)
AC_SUBST(lgui_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
